Prevent page horizontal overflow

--- a/src/styles/layouts.styl
+++ b/src/styles/layouts.styl
@@ -56,6 +56,9 @@ lineHeight = 1.4
 html, body
   height: 100%
 
+body
+  overflow-x: hidden
+
 .cardContainer
   margin-top: (cardWidth / 4)
 
